--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="shortcut icon" href="<%= webpackConfig.output.publicPath %>favicon.ico">
+    <meta name="theme-color" content="#FFED65">
+    <meta name="apple-mobile-web-app-status-bar-style" content="translucent">
     <title>WHATCoin WHICHCoin</title>
     <link rel="preload" as="script" href="/app.js">
   </head>
