--- a/public/index.html
+++ b/public/index.html
@@ -1,55 +1,17 @@
-Html Webpack Plugin:<pre>
-  Error: Child compilation failed:
-  Entry module not found: Error: Can't resolve '/Users/mannuelferreira/workspace/sandbox/whatcoinwhichcoin/public/index.html' in '/Users/mannuelferreira/workspace/sandbox/whatcoinwhichcoin':
-  Error: Can't resolve '/Users/mannuelferreira/workspace/sandbox/whatcoinwhichcoin/public/index.html' in '/Users/mannuelferreira/workspace/sandbox/whatcoinwhichcoin'
-  
-  - compiler.js:79 childCompiler.runAsChild
-    [whatcoinwhichcoin]/[cli-service]/[html-webpack-plugin]/lib/compiler.js:79:16
-  
-  - Compiler.js:300 compile
-    [whatcoinwhichcoin]/[cli-service]/[webpack]/lib/Compiler.js:300:11
-  
-  - Compiler.js:510 applyPluginsAsync.err
-    [whatcoinwhichcoin]/[cli-service]/[webpack]/lib/Compiler.js:510:14
-  
-  - Tapable.js:202 next
-    [whatcoinwhichcoin]/[cli-service]/[tapable]/lib/Tapable.js:202:11
-  
-  - CachePlugin.js:78 Compiler.<anonymous>
-    [whatcoinwhichcoin]/[cli-service]/[webpack]/lib/CachePlugin.js:78:5
-  
-  - Tapable.js:206 Compiler.applyPluginsAsyncSeries
-    [whatcoinwhichcoin]/[cli-service]/[tapable]/lib/Tapable.js:206:13
-  
-  - Compiler.js:507 compilation.seal.err
-    [whatcoinwhichcoin]/[cli-service]/[webpack]/lib/Compiler.js:507:11
-  
-  - Tapable.js:195 Compilation.applyPluginsAsyncSeries
-    [whatcoinwhichcoin]/[cli-service]/[tapable]/lib/Tapable.js:195:46
-  
-  - Compilation.js:677 applyPluginsAsync.err
-    [whatcoinwhichcoin]/[cli-service]/[webpack]/lib/Compilation.js:677:19
-  
-  - Tapable.js:202 next
-    [whatcoinwhichcoin]/[cli-service]/[tapable]/lib/Tapable.js:202:11
-  
-  - index.js:126 LastCallWebpackPlugin.process
-    [whatcoinwhichcoin]/[last-call-webpack-plugin]/index.js:126:12
-  
-  - index.js:197 Compilation.<anonymous>
-    [whatcoinwhichcoin]/[last-call-webpack-plugin]/index.js:197:12
-  
-  - Tapable.js:206 Compilation.applyPluginsAsyncSeries
-    [whatcoinwhichcoin]/[cli-service]/[tapable]/lib/Tapable.js:206:13
-  
-  - Compilation.js:668 applyPluginsAsync.err
-    [whatcoinwhichcoin]/[cli-service]/[webpack]/lib/Compilation.js:668:11
-  
-  - Tapable.js:202 next
-    [whatcoinwhichcoin]/[cli-service]/[tapable]/lib/Tapable.js:202:11
-  
-  - index.js:334 
-    [whatcoinwhichcoin]/[uglifyjs-webpack-plugin]/dist/index.js:334:11
-  
-</anonymous></anonymous></pre><script type=text/javascript>(function(r){var n=window["webpackJsonp"];window["webpackJsonp"]=function(e,u,c){for(var i,f,p,l=0,a=[];l<e.length;l++)f=e[l],t[f]&&a.push(t[f][0]),t[f]=0;for(i in u)Object.prototype.hasOwnProperty.call(u,i)&&(r[i]=u[i]);n&&n(e,u,c);while(a.length)a.shift()();if(c)for(l=0;l<c.length;l++)p=o(o.s=c[l]);return p};var e={},t={2:0};function o(n){if(e[n])return e[n].exports;var t=e[n]={i:n,l:!1,exports:{}};return r[n].call(t.exports,t,t.exports,o),t.l=!0,t.exports}o.m=r,o.c=e,o.d=function(r,n,e){o.o(r,n)||Object.defineProperty(r,n,{configurable:!1,enumerable:!0,get:e})},o.n=function(r){var n=r&&r.__esModule?function(){return r["default"]}:function(){return r};return o.d(n,"a",n),n},o.o=function(r,n){return Object.prototype.hasOwnProperty.call(r,n)},o.p="/",o.oe=function(r){throw console.error(r),r}})([]);
-//# sourceMappingURL=/js/manifest.ce28c628.js.map</script><script type=text/javascript src=/js/vendor.4d814b87.js></script><script type=text/javascript src=/js/app.f9ed9e65.js></script>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <title>whatcoinwhichcoin</title>
+  </head>
+  <body>
+    <noscript>
+      <strong>We're sorry but whatcoinwhichcoin doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+    </noscript>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
+  </body>
+</html>
