--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,16 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>WHATCoinWHICHCoin</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rajdhani:300,600,700|Roboto+Mono:100,300" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" integrity="sha256-j+P6EZJVrbXgwSR5Mx+eCS6FvP9Wq27MBRC/ogVriY0=" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" integrity="sha256-oSrCnRYXvHG31SBifqP2PM1uje7SJUyX0nTwO2RJV54=" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.3.0/milligram.min.css" integrity="sha256-Ro/wP8uUi8LR71kwIdilf78atpu8bTEwrK5ZotZo+Zc=" crossorigin="anonymous" />
     <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#ffed65">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="whatcoinwhichcoin.com">
+    <meta name="msapplication-TileColor" content="#ffed65">
+    <meta name="msapplication-TileImage" content="/mstile-144x144.png">
   </head>
   <body>
     <noscript>
