icons icon icons

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" href="<%= BASE_URL %>/images/favicon.ico">
+    <link rel="icon" type="image/png" href="<%= BASE_URL %>/assets/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="<%= BASE_URL %>/assets/favicon-16x16.png" sizes="16x16" />
     <title>WHATCoinWHICHCoin</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rajdhani:300,600,700|Roboto+Mono:100,300" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" integrity="sha256-j+P6EZJVrbXgwSR5Mx+eCS6FvP9Wq27MBRC/ogVriY0=" crossorigin="anonymous" />
@@ -15,7 +17,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="whatcoinwhichcoin.com">
     <meta name="msapplication-TileColor" content="#ffed65">
-    <meta name="msapplication-TileImage" content="/mstile-144x144.png">
+    <meta name="msapplication-TileImage" content="<%= BASE_URL %>/assets/mstile-144x144.png">
   </head>
   <body>
     <noscript>
