--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,21 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" integrity="sha256-oSrCnRYXvHG31SBifqP2PM1uje7SJUyX0nTwO2RJV54=" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.3.0/milligram.min.css" integrity="sha256-Ro/wP8uUi8LR71kwIdilf78atpu8bTEwrK5ZotZo+Zc=" crossorigin="anonymous" />
     <link rel="manifest" href="<%= BASE_URL %>manifest.json">
-    <meta name="theme-color" content="#ffed65">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="whatcoinwhichcoin.com">
+    <meta name="theme-color" content="#ffed65">
     <meta name="msapplication-TileColor" content="#ffed65">
     <meta name="msapplication-TileImage" content="<%= BASE_URL %>assets/mstile-144x144.png">
+    <link rel="apple-touch-icon" href="<%= BASE_URL %>apple-icon-57x57.png" sizes="57x57">
+    <link rel="apple-touch-icon" href="<%= BASE_URL %>apple-icon-60x60.png" sizes="60x60">
+    <link rel="apple-touch-icon" href="<%= BASE_URL %>apple-icon-72x72.png" sizes="72x72">
+    <link rel="apple-touch-icon" href="<%= BASE_URL %>apple-icon-76x76.png" sizes="76x76">
+    <link rel="apple-touch-icon" href="<%= BASE_URL %>apple-icon-114x114.png" sizes="114x114">
+    <link rel="apple-touch-icon" href="<%= BASE_URL %>apple-icon-120x120.png" sizes="120x120">
+    <link rel="apple-touch-icon" href="<%= BASE_URL %>apple-icon-144x144.png" sizes="144x144">
+    <link rel="apple-touch-icon" href="<%= BASE_URL %>apple-icon-152x152.png" sizes="152x152">
+    <link rel="apple-touch-icon" href="<%= BASE_URL %>apple-icon-180x180.png" sizes="180x180">
   </head>
   <body>
     <noscript>
