add service worker

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
     <link rel="apple-touch-icon" href="<%= BASE_URL %>apple-icon-144x144.png" sizes="144x144">
     <link rel="apple-touch-icon" href="<%= BASE_URL %>apple-icon-152x152.png" sizes="152x152">
     <link rel="apple-touch-icon" href="<%= BASE_URL %>apple-icon-180x180.png" sizes="180x180">
+    <script src="./sw.js"></script>
   </head>
   <body>
     <noscript>
