--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" href="<%= BASE_URL %>assets/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="<%= BASE_URL %>assets/favicon-16x16.png" sizes="16x16" />
     <title>WHATCoinWHICHCoin</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rajdhani:300,600,700|Roboto+Mono:100,300" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rajdhani:300,600,700|Roboto+Mono:100,300|VT323" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" integrity="sha256-j+P6EZJVrbXgwSR5Mx+eCS6FvP9Wq27MBRC/ogVriY0=" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" integrity="sha256-oSrCnRYXvHG31SBifqP2PM1uje7SJUyX0nTwO2RJV54=" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.3.0/milligram.min.css" integrity="sha256-Ro/wP8uUi8LR71kwIdilf78atpu8bTEwrK5ZotZo+Zc=" crossorigin="anonymous" />
@@ -16,8 +16,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="whatcoinwhichcoin.com">
-    <meta name="theme-color" content="#ffed65">
-    <meta name="msapplication-TileColor" content="#ffed65">
+    <meta name="theme-color" content="#1B98E0">
+    <meta name="msapplication-TileColor" content="#1B98E0">
     <meta name="msapplication-TileImage" content="<%= BASE_URL %>assets/mstile-144x144.png">
     <link rel="apple-touch-icon" href="<%= BASE_URL %>apple-icon-57x57.png" sizes="57x57">
     <link rel="apple-touch-icon" href="<%= BASE_URL %>apple-icon-60x60.png" sizes="60x60">
